@@ -1,5 +1,6 @@
 
 add_subdirectory(arp_spoof)
+add_subdirectory(binder)
 add_subdirectory(normalize)
 add_subdirectory(perf_monitor)
 add_subdirectory(port_scan)
@@ -18,6 +19,7 @@ add_library( network_inspectors STATIC
 
 target_link_libraries( network_inspectors
     ${STATIC_INSPECTOR_LIBS}
+    binder
     perf_monitor
     normalize
 )
